# pressense

./: .gitignore  CMakeLists.txt  CODING_STANDARDS.md  LICENSE  README.md  TODO.md  platformio.ini
boards/: inject_board_header.py  waveshare_rp2350b_core.h  waveshare_rp2350b_core.json
lib/esp/: esp32_arpeggio_task.hpp  esp32_audio_sink.hpp  esp32_capacitive_scanner.hpp  esp32_midi_in.hpp
lib/esp32/: embedded_program_storage.hpp  esp32_audio_sink.hpp  esp32_capacitive_scanner.hpp  esp32_telemetry_sink.hpp  esp32_timing.hpp  esp32_timing_policy.hpp
lib/features/: clipboard.hpp  embedded_program_storage.hpp  filesystem_program_storage.hpp  performance_timer.hpp  preset_clipboard.hpp  program_storage.hpp  telemetry_sink.hpp
lib/linux/: alsa_midi_in.hpp  filesystem_program_storage.hpp  linux_audio_sink.hpp  linux_timing.hpp  linux_timing_policy.hpp  preset_clipboard.hpp
lib/midi/: key_scanner.hpp  midi_keyboard_controller.hpp  note_target.hpp  program_data.hpp  simple_voice_allocator.hpp  stream_processor.cpp  stream_processor.hpp  synth.hpp  synth_channel_allocator.hpp  synth_voice_allocator.hpp
lib/nlohmann/: README
lib/platform/: audio_stats.hpp  log.hpp  polyphonic_synth_target.hpp  synth_application.hpp  timing.hpp  timing_stats.hpp  voice_timing_stats.hpp
lib/rp2350/: capacitive_touch.pio  (+9 more)
src/: CMakeLists.txt  linux_audio_sink.hpp  main.cpp  main_esp32.cpp  main_linux.cpp  main_rp2350.cpp  sawtooth_synth.hpp
test/: README.md  test_midi_synth_driver.c  unittest_transport.h
tools/: README_telemetry.md  pressence_ui.html  telemetry_visualizer.html
(+19 files in other folders)
